HWPI basetheme. Fix IE8 compat mode content column wrapping issue

--- a/openscholar/themes/hwpi_basetheme/css/hwpi.basetheme.layout.css
+++ b/openscholar/themes/hwpi_basetheme/css/hwpi.basetheme.layout.css
@@ -233,6 +233,10 @@
   .front .content-left.content-right.content-bottom #content-panels .region {
     width: 33.333333%;
   }
+  
+ .lt-ie9 .front .content-left.content-right.content-bottom #content-panels .region {
+    width: 33.3%;
+  }
 
   .content-left.content-right .region-content-first .region-inner,
   .content-left.content-bottom .region-content-first .region-inner,
